fix item show overflow

--- a/web/styles.css
+++ b/web/styles.css
@@ -400,8 +400,6 @@ body,
 
 /* content */
 .content {
-	overflow-wrap: break-word;
-
 	h1 {
 		font-size: 1.8rem;
 	}
